# flatbuffers

./: .gitignore  404.html  AGENTS.md  CMakeLists.txt  MODULE.bazel  PRESERVE_CASE_NOTES.md  README.md  VULNERABILITIES.md  build_wasm.sh  flatc.mjs  index.html  monster_test_generated.h  monsterdata_test.json  package.json  pnpm-workspace.yaml  sdn-plugin-compliance.json  sitemap.xml  test.mjs  test.txt
.claude/: SKILLS.md
.husky/: pre-commit
CMake/: BuildWasm.cmake
annotation/: index.html
benchmarks/: index.html
building/: index.html
contributing/: index.html
deno/: flatc.ts
docs/: 404.html  aligned_mode_todo.md  app.mjs  index.html  json_schema_ir.md  mkdocs.yml  sitemap.xml  streaming-demo.mjs  streaming-dispatcher.wasm  virtual-scroller.mjs
evolution/: index.html
flatc/: index.html
flexbuffers/: index.html
go/: go.mod
grammar/: index.html
intermediate_representation/: index.html
internals/: index.html
json_schema/: index.html
quick_start/: index.html
schema/: index.html
scripts/: build_flatc_wasm.sh  build_wasm.sh  check-sdn-plugin-compliance.mjs  fix.sh  flatc-stream.mjs  gen_test_code.py  generate_embedded_runtimes.mjs
src/: BUILD.bazel  aligned_compiler.cpp  aligned_compiler.h  embedded_runtimes_data.h  encryption.cpp  encryption_emscripten.cpp  encryption_wasi.cpp  flatc.cpp  flatc_main.cpp  flatc_wasm.cpp  global_options.cpp  idl_gen_go.cpp  (+29 more)
wasm/examples/rust-encryption/: Cargo.toml  README.md
wasm/examples/rust-encryption/src/: lib.rs
wasm/examples/rust-wasi/: Cargo.toml
wasm/examples/rust-wasi/src/: lib.rs  main.rs
(+656 files in other folders)
