[package]
name = "flatc-wasm-encryption"
version = "0.1.0"
edition = "2021"
description = "FlatBuffers field-level encryption compatible with flatc-wasm"
license = "Apache-2.0"
repository = "https://github.com/google/flatbuffers"

[dependencies]
regex = "1"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
